--- a/index.html
+++ b/index.html
@@ -38,14 +38,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Productos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Nosotros</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Nosotros
+                            Usuario
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
-                            <li><a class="dropdown-item" href="#">Quienes somos</a></li>
-                            <li><a class="dropdown-item" href="#">Nuestros trabajos</a></li>
+                            <li><a class="dropdown-item" href="#">Login</a></li>
+                            <li><a class="dropdown-item" href="#">Registrate</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -86,6 +89,26 @@
         </div>
 
     </main>
+    <aside class="aside">
+        <h3> Espacio publicitario</h3>
+        <ul class="aside-ads">
+            <li class="ad"><a href="https://www.mcdonalds.com.ar/" class="ad-link"><img src="./assets/mc-donalds.jpg"
+                        alt="publicidad mc donalds" class="ad-img"></a></li>
+            <li class="ad"><a href="https://www.cocacoladeargentina.com.ar/inicio" class="ad-link"><img
+                        src="./assets/coca-cola.jpg" alt="Publicidad coca cola" class="ad-img"></a></li>
+            <li class="ad"><a href="https://www.quilmes.com.ar/" class="ad-link"><img src="./assets/quilmes.jpg"
+                        alt="publicidad quilmes" class="ad-img"></a></li>
+            <li class="ad"><a href="https://lays.es/" class="ad-link"><img src="./assets/lays.jpg" alt="publicidad lays"
+                        class="ad-img"></a></li>
+        </ul>
+    </aside>
+    
+    <footer class="footer">
+        <p class="copy"> &copy Todos los derechos reservados.<br>
+            Manuel Vega<br>
+            2021
+        </p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
