--- a/item4.html
+++ b/item4.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PC Cosas</title>
+    <title>Productos</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +16,8 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg bg-light fixed-top">
-        <a class="navbar-brand" href="./index.html"><i><img src="./assets/instalar-en-pc.png" alt="icon pc" class="icon-pc"></i>
+        <a class="navbar-brand" href="./index.html"><i><img src="./assets/instalar-en-pc.png" alt="icon pc"
+                    class="icon-pc"></i>
             <h1>PC Cosas</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg"
@@ -59,50 +60,28 @@
         </div>
         </div>
     </nav>
-    <main>
-        <div class="portada"></div>
-        <h2>
-            Novedades
-        </h2>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./assets/gabinete cooler master.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/Intel-i9.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/RTX-3090.jpg" class="d-block w-100" alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+    <main class="main">
+        <div class="item-menu">
+            <img src="./assets/corsair-vengeance.jpg" alt="corsair vengeance" class="item-photo"></img>
+            <ul class="item-features">
+                <li class="item-name">
+                    <h2 class="title-item"> Corsair Vengeance Pro RGB 16GB 3200Mhz</h2>
+                </li>
+                <li class="item-description">Descripcion del producto:
+                    <p class="p-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ea, magni laboriosam, id sapiente officia corporis iure dolorem, aperiam consequatur beatae placeat soluta. Mollitia sint ex officia, placeat saepe quisquam.</p>
+                </li>
+                <li class="item-price">
+                    <p class="p-item-price"> $16.500 </p>
+                </li>
+                <li class="buy-item-quantity">
+                    <label for="quantity">Cantidad (Entre 1 y 10):</label>
+                    <input type="number" id="quantity" name="quantity" min="1" max="10" value="1">
+                </li>
+                <button class="go-thanks-buy" onclick="location.href='./buying.html'"> Comprar </button>
+            </ul>
+
         </div>
-
     </main>
-    <aside class="aside">
-        <h3> Espacio publicitario</h3>
-        <ul class="aside-ads">
-            <li class="ad"><a href="https://www.mcdonalds.com.ar/" class="ad-link"><img src="./assets/mc-donalds.jpg"
-                        alt="publicidad mc donalds" class="ad-img"></a></li>
-            <li class="ad"><a href="https://www.cocacoladeargentina.com.ar/inicio" class="ad-link"><img
-                        src="./assets/coca-cola.jpg" alt="Publicidad coca cola" class="ad-img"></a></li>
-            <li class="ad"><a href="https://www.quilmes.com.ar/" class="ad-link"><img src="./assets/quilmes.jpg"
-                        alt="publicidad quilmes" class="ad-img"></a></li>
-            <li class="ad"><a href="https://lays.es/" class="ad-link"><img src="./assets/lays.jpg" alt="publicidad lays"
-                        class="ad-img"></a></li>
-        </ul>
-    </aside>
-
     <footer class="footer">
         <p class="copy"> &copy Todos los derechos reservados.<br>
             Manuel Vega<br>
