--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <title>PC Cosas</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="body-about-us">
     <nav class="navbar navbar-light navbar-expand-lg bg-light fixed-top">
         <a class="navbar-brand" href="./index.html"><i><img src="./assets/instalar-en-pc.png" alt="icon pc" class="icon-pc"></i>
             <h1>PC Cosas</h1>
@@ -59,27 +59,16 @@
         </div>
         </div>
     </nav>
-    <main class="main">
-        <div class="item-menu">
-            <img src="./assets/Asus-Rog-notebook.jpg" alt="Notebook asus rog" class="item-photo"></img>
-            <ul class="item-features">
-                <li class="item-name">
-                    <h2 class="title-item"> Asus Rog G512li I5-10300 1650ti 144hz </h2>
-                </li>
-                <li class="item-description">Descripcion del producto:
-                    <p class="p-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ea, magni laboriosam, id sapiente officia corporis iure dolorem, aperiam consequatur beatae placeat soluta. Mollitia sint ex officia, placeat saepe quisquam.</p>
-                </li>
-                <li class="item-price">
-                    <p class="p-item-price"> $200.000 </p>
-                </li>
-                <li class="buy-item-quantity">
-                    <label for="quantity">Cantidad (Entre 1 y 10):</label>
-                    <input type="number" id="quantity" name="quantity" min="1" max="10" value="1">
-                </li>
-                <button class="go-thanks-buy" onclick="location.href='./buying.html'"> Comprar </button>
-            </ul>
 
-        </div>
+    <main class="about-us">
+        <h1> Somos PC Cosas </h1>
+
+        <img src="./assets/armado-pc.jpg" alt="Foto pc cosas">
+
+        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem, rerum numquam, pariatur doloribus
+            omnis rem harum blanditiis eligendi aut animi veritatis velit. Omnis minima vitae totam reprehenderit
+            aperiam pariatur sapiente.</p>
+        <p> Gracias por confiar en nosotros! </p>
     </main>
     <footer class="footer">
         <p class="copy"> &copy Todos los derechos reservados.<br>
@@ -88,8 +77,8 @@
         </p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+</script>
 </body>
 
 </html>
