--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <title>PC Cosas</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -59,27 +59,30 @@
         </div>
         </div>
     </nav>
-    <main class="main">
-        <div class="item-menu">
-            <img src="./assets/Asus-Rog-notebook.jpg" alt="Notebook asus rog" class="item-photo"></img>
-            <ul class="item-features">
-                <li class="item-name">
-                    <h2 class="title-item"> Asus Rog G512li I5-10300 1650ti 144hz </h2>
-                </li>
-                <li class="item-description">Descripcion del producto:
-                    <p class="p-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ea, magni laboriosam, id sapiente officia corporis iure dolorem, aperiam consequatur beatae placeat soluta. Mollitia sint ex officia, placeat saepe quisquam.</p>
-                </li>
-                <li class="item-price">
-                    <p class="p-item-price"> $200.000 </p>
-                </li>
-                <li class="buy-item-quantity">
-                    <label for="quantity">Cantidad (Entre 1 y 10):</label>
-                    <input type="number" id="quantity" name="quantity" min="1" max="10" value="1">
-                </li>
-                <button class="go-thanks-buy" onclick="location.href='./buying.html'"> Comprar </button>
-            </ul>
-
-        </div>
+    <main class="contact">
+        <h2> Nos encontramos en el barrio de La Boca! </h2>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d820.690424460724!2d-58.36472017074278!3d-34.635461895337635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDM4JzA3LjciUyA1OMKwMjEnNTEuMCJX!5e0!3m2!1ses-419!2sar!4v1632352705813!5m2!1ses-419!2sar"
+            width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+        <h3> Nuestras redes sociales: </h3>
+        <ul>
+            <li>
+                <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+            </li>
+            <li>
+                <a href=""><i class="fas fa-phone-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.tiktok.com/es/"><i class="fab fa-tiktok"></i></a>
+            </li>
+        </ul>
     </main>
     <footer class="footer">
         <p class="copy"> &copy Todos los derechos reservados.<br>
@@ -87,6 +90,8 @@
             2021
         </p>
     </footer>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
