--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="./products.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nosotros</a>
+                        <a class="nav-link" href="./about-us.html">Nosotros</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button"
@@ -47,12 +47,12 @@
                             Usuario
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
-                            <li><a class="dropdown-item" href="#">Login</a></li>
-                            <li><a class="dropdown-item" href="#">Registrate</a></li>
+                            <li><a class="dropdown-item" href="./login.html">Login</a></li>
+                            <li><a class="dropdown-item" href="./register.html">Registrate</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="./contact.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -67,13 +67,13 @@
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/gabinete cooler master.jpg" class="d-block w-100" alt="...">
+                    <a href="./item5.html"><img src="./assets/gabinete cooler master.jpg" class="d-block w-100" alt="..."></a>
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/Intel-i9.jpg" class="d-block w-100" alt="...">
+                    <a href="./item8.html"><img src="./assets/Intel-i9.jpg" class="d-block w-100" alt="..."></a>
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/RTX-3090.jpg" class="d-block w-100" alt="...">
+                    <a href="./item3.html"><img src="./assets/RTX-3090.jpg" class="d-block w-100" alt="..."></a>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
