--- a/item4.html
+++ b/item4.html
@@ -16,8 +16,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg bg-light fixed-top">
-        <a class="navbar-brand" href="./index.html"><i><img src="./assets/instalar-en-pc.png" alt="icon pc"
-                    class="icon-pc"></i>
+        <a class="navbar-brand" href="./index.html"><i><img src="./assets/instalar-en-pc.png" alt="icon pc" class="icon-pc"></i>
             <h1>PC Cosas</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg"
@@ -40,7 +39,7 @@
                         <a class="nav-link" href="./products.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nosotros</a>
+                        <a class="nav-link" href="./about-us.html">Nosotros</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button"
@@ -48,12 +47,12 @@
                             Usuario
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
-                            <li><a class="dropdown-item" href="#">Login</a></li>
-                            <li><a class="dropdown-item" href="#">Registrate</a></li>
+                            <li><a class="dropdown-item" href="./login.html">Login</a></li>
+                            <li><a class="dropdown-item" href="./register.html">Registrate</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="./contact.html">Contacto</a>
                     </li>
                 </ul>
             </div>
