--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 <body class="body-login">
     <main class="login">
         <div>
-            <a href="./index.html"><img src="./assets/instalar-en-pc.png" alt="Logo pc cosas">
+            <a href="./index.html"><img src="./assets/instalar-en-pc.png" alt="Logo pc cosas"></a>
             <form action="#" method="GET" class="form">
                 <label class="form-item">Usuario
                     <input type="text" name="user" id="user" maxlength="24" required>
