--- a/products.html
+++ b/products.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,9 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav class="navbar navbar-light navbar-expand-lg bg-light fixed-top">
-        <a class="navbar-brand" href="./index.html"><i><img src="./assets/instalar-en-pc.png" alt="icon pc" class="icon-pc"></i>
+        <a class="navbar-brand" href="./index.html"><i><img src="./assets/instalar-en-pc.png" alt="icon pc"
+                    class="icon-pc"></i>
             <h1>PC Cosas</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg"
@@ -71,15 +74,15 @@
                     <p class="product-price"> $700.000 </p>
                 </li>
                 <li class="product-item">
-                    <a href="./item2.html" class="product-link"> <img class='product-image'
-                            src="./assets/ryzen 9.jpg" alt="Ryzen 9"> </a>
+                    <a href="./item2.html" class="product-link"> <img class='product-image' src="./assets/ryzen 9.jpg"
+                            alt="Ryzen 9"> </a>
                     <p class="name-product"> <a href="./item2.html" class="product-link-text"> Ryzen 9 5900x </a>
                     </p>
                     <p class="product-price"> $78.800 </p>
                 </li>
                 <li class="product-item">
-                    <a href="./item3.html" class="product-link"> <img class='product-image'
-                            src="./assets/RTX-3090.jpg" alt=" RTX 3090 "> </a>
+                    <a href="./item3.html" class="product-link"> <img class='product-image' src="./assets/RTX-3090.jpg"
+                            alt=" RTX 3090 "> </a>
                     <p class="name-product"> <a href="./item3.html" class="product-link-text"> EVGA RTX 3090 </a>
                     </p>
                     <p class="product-price"> $698.000 </p>
@@ -138,4 +141,5 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
 </body>
+
 </html>
