--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg bg-light fixed-top">
-        <a class="navbar-brand" href="./index.html"><i><img src="./assets/instalar-en-pc.png" alt="icon pc" class="icon-pc"></i>
+        <a class="navbar-brand" href="./index.html"><i><img src="./assets/instalar-en-pc.png" alt="icon pc"
+                    class="icon-pc"></i>
             <h1>PC Cosas</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg"
@@ -33,7 +34,7 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./products.html">Productos</a>
@@ -61,13 +62,14 @@
     </nav>
     <main>
         <div class="portada"></div>
-        <h2>
+        <h2 class="index-title">
             Novedades
         </h2>
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <a href="./item5.html"><img src="./assets/gabinete cooler master.jpg" class="d-block w-100" alt="..."></a>
+                    <a href="./item5.html"><img src="./assets/gabinete cooler master.jpg" class="d-block w-100"
+                            alt="..."></a>
                 </div>
                 <div class="carousel-item">
                     <a href="./item8.html"><img src="./assets/Intel-i9.jpg" class="d-block w-100" alt="..."></a>
