--- a/about-us.html
+++ b/about-us.html
@@ -16,7 +16,8 @@
 
 <body class="body-about-us">
     <nav class="navbar navbar-light navbar-expand-lg bg-light fixed-top">
-        <a class="navbar-brand" href="./index.html"><i><img src="./assets/instalar-en-pc.png" alt="icon pc" class="icon-pc"></i>
+        <a class="navbar-brand" href="./index.html"><i><img src="./assets/instalar-en-pc.png" alt="icon pc"
+                    class="icon-pc"></i>
             <h1>PC Cosas</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg"
@@ -33,7 +34,7 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./products.html">Productos</a>
@@ -57,6 +58,23 @@
                 </ul>
             </div>
         </div>
+        </div>
+    </nav>
+    <nav class="inline">
+        <div class="icon">
+            <a href="./index.html">
+                <i><img src="./assets/instalar-en-pc.png" alt="icon"></i>
+                <h1>PC Cosas</h1>
+            </a>
+        </div>
+        <div class="content-inline">
+            <ul class="content-list">
+                <li><a href="./index.html"> Home </a></li>
+                <li><a href="./products.html"> Productos </a></li>
+                <li><a href="./about-us.html"> Nosotros </a></li>
+                <li><a href="./login.html"> Login </a></li>
+                <li><a href="./contact.html"> Contacto </a></li>
+            </ul>
         </div>
     </nav>
 
