--- a/index.html
+++ b/index.html
@@ -60,8 +60,26 @@
         </div>
         </div>
     </nav>
+    <nav class="inline">
+        <div class="icon">
+            <a href="./index.html">
+                <i><img src="./assets/instalar-en-pc.png" alt="icon"></i>
+                <h1>PC Cosas</h1>
+            </a>
+        </div>
+        <div class="content-inline">
+            <ul class="content-list">
+                <li><a href="./index.html"> Home </a></li>
+                <li><a href="./products.html"> Productos </a></li>
+                <li><a href="./about-us.html"> Nosotros </a></li>
+                <li><a href="./login.html"> Login </a></li>
+                <li><a href="./contact.html"> Contacto </a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="portada"></div>
     <main>
-        <div class="portada"></div>
+        <div class="new">
         <h2 class="index-title">
             Novedades
         </h2>
@@ -89,7 +107,7 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-
+    </div>
     </main>
     <aside class="aside">
         <h3> Espacio publicitario</h3>
